implemented ongoing and finished components

--- a/frontend/src/pages/RecommendedCharityScreen/RecommendedCharityScreen.css
+++ b/frontend/src/pages/RecommendedCharityScreen/RecommendedCharityScreen.css
@@ -3,19 +3,6 @@
     margin-top: 50px;
     padding: 20px;
 }
-.recommendedTitle{
-    font-weight: bold;
-    font-size: 32px;
-    margin-bottom: 10px;
-}
-.description {
-    font-size: 14px;
-}
-.donationValue{
-    color: #00579B;
-    font-weight: bolder;
-    font-size: 32px;
-}
 .card-content-ios{
     padding: 0;
     background-color: #F1F5F8;
@@ -23,6 +10,10 @@
 .item-native{
     padding-left: 0;
 }
-.donationCard{
-    margin: 20px 0;
+.browseText{
+    font-weight: bold;
+    margin: 10px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    font-size: 20px;
 }
