fixed css naming

--- a/frontend/src/components/CampaignDetails/CampaignDetails.css
+++ b/frontend/src/components/CampaignDetails/CampaignDetails.css
@@ -12,7 +12,7 @@
   margin-bottom: 3%;
 }
 
-.charityLogo {
+.charityLogoC {
   border: solid 1px #DEDEDE;
   border-radius: 10px;
   object-fit: contain;
